<resources>
    <string name="app_name">Food Center</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_food_center">Welcome to Food Center</string>
    <string name="in_order_to_use_food_center_please_sign_in_with_your_google_account">In order to use Food Center, please sign in with your Google account.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="cart">Cart</string>
    <string name="total_items">Total Items</string>
    <string name="shipping">Shipping</string>
    <string name="total_cost">Total Cost</string>
    <string name="checkout">Checkout</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="your_order_is_on_the_way_to_you">Your order is on the way to you</string>
    <string name="back_to_main_screen">Back to Main Screen</string>
    <string name="details">Details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="_5">5₺</string>
</resources>